--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zsh/pure"]
 	path = zsh/pure
 	url = git://github.com/sindresorhus/pure.git
+[submodule "iterm/themes/base-16"]
+	path = iterm/themes/base-16
+	url = git://github.com/chriskempson/base16-iterm2.git
