--- a/mackup.cfg
+++ b/mackup.cfg
@@ -4,11 +4,10 @@
 
 [storage]
 engine = file_system
-path = ~/Sync
+path = Sync
 directory = Mackup
 
 [applications_to_sync]
-atom
 bettertouchtool
 dash
 iterm2
@@ -19,4 +18,3 @@ sequel-pro
 shuttle
 transmission
 cyberduck
-mackup
