--- a/config/mpv/mpv.conf
+++ b/config/mpv/mpv.conf
@@ -81,9 +81,8 @@ sub-text-spacing=0.5
 
 audio-file-auto=fuzzy                   # external audio doesn't has to match the file name exactly to autoload
 audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed
-softvol=yes
-softvol-max=200                         # maximum volume in %, everything above 100 results in amplification
 volume=100                              # default volume, 100 = unchanged
+volume-max=200                          # maximum volume in %, everything above 100 results in amplification
 
 
 ################
