--- a/home/.config/mpv/mpv.conf
+++ b/home/.config/mpv/mpv.conf
@@ -62,17 +62,17 @@ sub-auto=fuzzy                          # external subs don't have to match the 
 sub-paths=ass:srt:sub:subs:subtitles    # search for external subs in the listed subdirectories
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 sub-fix-timing=no                       # do not try to fix gaps (which might make it worse in some cases)
-ass-force-style=Kerning=yes             # allows you to override style parameters of ASS scripts
+sub-ass-force-style=Kerning=yes             # allows you to override style parameters of ASS scripts
 
 # the following options only apply to subtitles without own styling (i.e. not ASS but e.g. SRT)
-sub-text-font="Source Sans Pro Semibold"
-sub-text-font-size=36
-sub-text-color="#FFFFFFFF"
-sub-text-border-color="#FF262626"
-sub-text-border-size=3.2
-sub-text-shadow-offset=1
-sub-text-shadow-color="#33000000"
-sub-text-spacing=0.5
+sub-font="Source Sans Pro Semibold"
+sub-font-size=36
+sub-color="#FFFFFFFF"
+sub-border-color="#FF262626"
+sub-border-size=3.2
+sub-shadow-offset=1
+sub-shadow-color="#33000000"
+sub-spacing=0.5
 
 
 #########
@@ -89,20 +89,20 @@ volume-max=200                          # maximum volume in %, everything above 
 # Video Output # active VOs (and some other options) are set externally by a script
 ################
 
-vo=opengl-hq
+profile=opengl-hq
 
 
 [high-quality]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=triangle:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:correct-downscaling=yes
+profile=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=triangle:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:correct-downscaling=yes
 
 [mid-quality]
 profile-desc="Medium quality VO settings"
-vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=triangle:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:correct-downscaling=yes
+profile=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=triangle:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:correct-downscaling=yes
 
 [low-quality]
 profile-desc="Low energy VO settings"
-vo=opengl:scale=spline36:dscale=mitchell:tscale=triangle:dither-depth=auto:target-prim=bt.709:correct-downscaling=yes
+profile=opengl:scale=spline36:dscale=mitchell:tscale=triangle:dither-depth=auto:target-prim=bt.709:correct-downscaling=yes
 hwdec=auto
 
 [default]
