--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "dotfiles",
   "version": "1.0.0",
+  "license": "UNLICENSED",
+  "private": true,
   "dependencies": {
     "commander": "2.15.1",
     "gm": "1.23.1",
