--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "commander": "2.19.0",
+    "commander": "3.0.2",
     "gm": "1.23.1",
-    "lodash": "^4.17.11",
-    "shelljs": "^0.8.2"
+    "lodash": "4.17.15",
+    "shelljs": "0.8.3"
   }
 }
